<resources>
    <string name="app_name">APInstagramClone</string>
    <!--    Credential for Back4App server-->
    <string name="YOUR_APP_ID">WRKFdsfPoVoRQdP4QpyRPjo2x03T0EGilcoHIBxu</string>
    <string name="YOUR_CLIENT_KEY">taYMyGlyDpq8uj8l49CnycP4ZBL8vt7Lx669Jfky</string>
    <string name="BACKEND_URL">https://parseapi.back4app.com/</string>
    <!--    Text for the App-->
    <string name="enter_email">Please enter email</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_password">Please enter password</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="logout_menu">Logout</string>
    <string name="camera_menu">Post Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="enter_name">Please enter a profile name</string>
    <string name="enter_bio">Please enter your bio</string>
    <string name="enter_profess">Please enter your profession</string>
    <string name="enter_hobbies">Please enter your hobbies</string>
    <string name="enter_sport">Please enter your favorite sport</string>
    <string name="update_info">Update info</string>
    <string name="user_load_messege">Loading Data From Server. Please wait...</string>
    <string name="hold_image">hold Image</string>
    <string name="text_image">Please enter a description for your image...</string>
    <string name="share_image">Share Image</string>
    <string name="post_image">Post Image</string>
</resources>
