<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear_loginRoot"
    tools:context=".activity.LoginActivity"
    android:background="#DC34E2">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/instagram_logo"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:background="#FCE62D"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:background="#DF3442"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>